--- a/Project Development Phase/Sprint 2/Model Building/model_building.ipynb
+++ b/Project Development Phase/Sprint 2/Model Building/model_building.ipynb
@@ -4,14 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Preprocessing"
+    "# Model Building"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this, we will pre-process the images which will be used for building the model. Image pre-processing includes zooming, shearing, flipping to increase the robustness of the model after it is built. We will be using the Keras package for pre-processing images."
+    "In this milestone, we start building our model by:\n",
+    "1. Initializing the model\n",
+    "2. Adding Convolution layers\n",
+    "3. Adding Pooling layers\n",
+    "4. Flatten layer\n",
+    "5. Full connection layers which include hidden layers <br>\n",
+    "At last, we compile the model with layers we added to complete the neural network structure.\n"
    ]
   },
   {
