--- a/Project Development Phase/Sprint 2/Model Building/model_building.ipynb
+++ b/Project Development Phase/Sprint 2/Model Building/model_building.ipynb
@@ -48,7 +48,16 @@
       "metadata": {
         "id": "3Sg7EUw0JUzt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2022-11-16 01:58:08.921975: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+            "2022-11-16 01:58:08.922019: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+          ]
+        }
+      ],
       "source": [
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "train_datagen=ImageDataGenerator(rescale = 1./255, shear_range=0.2, zoom_range=0.2,horizontal_flip=True)\n",
@@ -78,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,12 +105,12 @@
         }
       ],
       "source": [
-        "x_train = train_datagen.flow_from_directory(\"/workspaces/IBM-Project-31588-1660203186/Project Development Phase/Sprint 1/Data Collection/Create Train And Test Folders/Dataset/training_set\", target_size=(64,64), batch_size=300, class_mode='categorical', color_mode =\"grayscale\")"
+        "x_train = train_datagen.flow_from_directory(\"/workspace/IBM-Project-31588-1660203186/Project Development Phase/Sprint 1/Data Collection/Create Train And Test Folders/Dataset/training_set\", target_size=(64,64), batch_size=300, class_mode='categorical', color_mode =\"grayscale\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,7 +128,7 @@
         }
       ],
       "source": [
-        "x_test = test_datagen.flow_from_directory('/workspaces/IBM-Project-31588-1660203186/Project Development Phase/Sprint 1/Data Collection/Create Train And Test Folders/Dataset/test_set', target_size=(64,64),batch_size=300, class_mode='categorical', color_mode =\"grayscale\")"
+        "x_test = test_datagen.flow_from_directory('/workspace/IBM-Project-31588-1660203186/Project Development Phase/Sprint 1/Data Collection/Create Train And Test Folders/Dataset/test_set', target_size=(64,64),batch_size=300, class_mode='categorical', color_mode =\"grayscale\")"
       ]
     },
     {
@@ -142,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "G6s68zLaN2Kd"
       },
@@ -177,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "V0R5rWtBOVgx"
       },
@@ -186,10 +195,10 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "2022-11-15 12:41:28.402197: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-            "2022-11-15 12:41:28.402250: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-            "2022-11-15 12:41:28.402280: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (codespaces-d62c3a): /proc/driver/nvidia/version does not exist\n",
-            "2022-11-15 12:41:28.402735: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+            "2022-11-16 01:59:46.579333: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+            "2022-11-16 01:59:46.579380: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+            "2022-11-16 01:59:46.579402: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ibmepbl-ibmproject31588-haui0aye5ti): /proc/driver/nvidia/version does not exist\n",
+            "2022-11-16 01:59:46.579636: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
             "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
           ]
         }
@@ -218,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "G_n93NPhOk_P"
       },
@@ -248,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "TbSLuVkLPA-f"
       },
@@ -277,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "id": "ZeNUqMCvPOFy"
       },
@@ -306,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "id": "nUP8mFqKPdNs"
       },
@@ -317,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {
         "id": "4CODmNqCPx04"
       },
@@ -346,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "id": "Vv6pmSWqPpj_"
       },
@@ -375,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -388,7 +397,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/codespace/anaconda3/envs/sandbox/lib/python3.7/site-packages/ipykernel_launcher.py:1: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "/home/gitpod/anaconda3/envs/sandbox/lib/python3.7/site-packages/ipykernel_launcher.py:1: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
             "  \"\"\"Entry point for launching an IPython kernel.\n"
           ]
         },
@@ -397,35 +406,35 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "24/24 [==============================] - ETA: 0s - loss: 1.1039 - accuracy: 0.6857WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 40 batches). You may need to use the repeat() function when building your dataset.\n",
-            "24/24 [==============================] - 27s 1s/step - loss: 1.1039 - accuracy: 0.6857 - val_loss: 0.4229 - val_accuracy: 0.9004\n",
+            "24/24 [==============================] - ETA: 0s - loss: 1.1821 - accuracy: 0.6429WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 40 batches). You may need to use the repeat() function when building your dataset.\n",
+            "24/24 [==============================] - 17s 661ms/step - loss: 1.1821 - accuracy: 0.6429 - val_loss: 0.4049 - val_accuracy: 0.8969\n",
             "Epoch 2/10\n",
-            "24/24 [==============================] - 10s 384ms/step - loss: 0.2476 - accuracy: 0.9272\n",
+            "24/24 [==============================] - 8s 340ms/step - loss: 0.2734 - accuracy: 0.9247\n",
             "Epoch 3/10\n",
-            "24/24 [==============================] - 6s 254ms/step - loss: 0.1449 - accuracy: 0.9601\n",
+            "24/24 [==============================] - 25s 1s/step - loss: 0.1360 - accuracy: 0.9614\n",
             "Epoch 4/10\n",
-            "24/24 [==============================] - 6s 253ms/step - loss: 0.0863 - accuracy: 0.9785\n",
+            "24/24 [==============================] - 12s 451ms/step - loss: 0.0849 - accuracy: 0.9783\n",
             "Epoch 5/10\n",
-            "24/24 [==============================] - 6s 250ms/step - loss: 0.0590 - accuracy: 0.9864\n",
+            "24/24 [==============================] - 8s 333ms/step - loss: 0.0539 - accuracy: 0.9868\n",
             "Epoch 6/10\n",
-            "24/24 [==============================] - 6s 243ms/step - loss: 0.0518 - accuracy: 0.9867\n",
+            "24/24 [==============================] - 19s 762ms/step - loss: 0.0459 - accuracy: 0.9896\n",
             "Epoch 7/10\n",
-            "24/24 [==============================] - 6s 249ms/step - loss: 0.0359 - accuracy: 0.9919\n",
+            "24/24 [==============================] - 8s 345ms/step - loss: 0.0339 - accuracy: 0.9921\n",
             "Epoch 8/10\n",
-            "24/24 [==============================] - 6s 247ms/step - loss: 0.0311 - accuracy: 0.9916\n",
+            "24/24 [==============================] - 18s 775ms/step - loss: 0.0249 - accuracy: 0.9955\n",
             "Epoch 9/10\n",
-            "24/24 [==============================] - 6s 248ms/step - loss: 0.0227 - accuracy: 0.9953\n",
+            "24/24 [==============================] - 8s 342ms/step - loss: 0.0211 - accuracy: 0.9950\n",
             "Epoch 10/10\n",
-            "24/24 [==============================] - 6s 247ms/step - loss: 0.0172 - accuracy: 0.9974\n"
+            "24/24 [==============================] - 12s 500ms/step - loss: 0.0171 - accuracy: 0.9966\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7febea070210>"
+              "<keras.callbacks.History at 0x7fb1d4644ad0>"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -470,7 +479,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.7.15",
+      "display_name": "sandbox",
       "language": "python",
       "name": "python3"
     },
@@ -488,7 +497,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "83569afb7c177649db623c9615d80366b55ee4a50b1edc8b8489271b517d709f"
+        "hash": "1e35320bad2f69dde0eb0825a838dcf3ce83abd175e9019a9365d53954fa546c"
       }
     }
   },
